some mekes in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-
+    <form>
+      <input type="text" name="adress" placeholder="Адрес RSS">
+    </form>
   </body>
 </html>
