--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <form>
       <input type="text" name="adress" placeholder="Адрес RSS">
+      <input type="submit" value="Получить">
     </form>
   </body>
 </html>
