trying to end 1 step. Need to connect eslint to webpack

--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <form>
-      <input type="text" name="adress" placeholder="Адрес RSS">
-      <input type="submit" value="Получить">
-    </form>
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>RSS agregator</title></head><body><form><input name="adress" placeholder="Адрес RSS"> <input type="submit" value="Получить"></form><script defer="defer" src="dist/bundle.js"></script></body></html>
