some actions by step 2

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form id="rssForm">
-      <input type="text" name="adress" placeholder="Адрес RSS">
+      <input type="text" id="newRSSAdress" name="adress" placeholder="Адрес RSS">
       <input type="submit" value="Получить">
     </form>
     <div id="feedsContainer">
