--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
               <div class="col">
                 <div class="form-floating">
-                  <input class="form-control w-100" type="text" id="newRSSAdress" name="adress" placeholder="Адрес RSS">
+                  <input class="form-control w-100" type="text" id="newRSSAdress" required placeholder="Адрес RSS">
                   <label for="url-input">Ссылка RSS</label>
                 </div>
               </div>
@@ -30,7 +30,7 @@
             </div>
           </form>
           <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
-          <p class="feedback m-0 position-absolute small text-danger"></p>
+          <p id="errorMessage" class="feedback m-0 position-absolute small text-danger"></p>
         </div>
       </div>
     </section>
