--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
               <div class="col">
                 <div class="form-floating">
-                  <input class="form-control w-100" type="text" id="newRSSAdress" required placeholder="Адрес RSS">
+                  <input class="form-control w-100" autocomplete="off" aria-label="New RSS URL" autofocus type="text" id="newRSSAdress" required placeholder="Адрес RSS">
                   <label for="url-input">Ссылка RSS</label>
                 </div>
               </div>
