--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
           </form>
           <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
-          <p id="errorMessage" class="feedback m-0 position-absolute small text-danger"></p>
+          <p id="addingStatusMessage" class="feedback m-0 position-absolute small text-danger"></p>
         </div>
       </div>
     </section>
