--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
               </div>
               <div class="col-auto">
-                <input type="submit" value="Добавить" class="h-100 btn btn-lg btn-primary px-sm-5">
+                <input type="submit" id="addRSSbutton" value="Добавить" class="h-100 btn btn-lg btn-primary px-sm-5">
               </div>
             </div>
           </form>
